[package]
name = "wappier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mongodb = "2.2.0"
actix-web = "4"
redis = { version = "0.21.5", features = ["tokio-comp"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1.0.136"
futures = "0.3.21"
env_logger = '0.9.0'
dotenv = "0.15.0"
derive_more = "0.99.17"
log = "0.4.17"
serde_json = "1.0.80"